--- a/.github/workflows/release-chart.yml
+++ b/.github/workflows/release-chart.yml
@@ -26,6 +26,10 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v3
 
+      - name: Add subcharts
+        run: |
+          helm repo add athens https://gomods.github.io/athens-charts
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
         env:
