--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -4,9 +4,9 @@ description: A Helm chart for Kubernetes
 
 type: application
 
-version: 0.1.0
+version: 0.1.1
 
-appVersion: "v0.1.0"
+appVersion: "0.1.0"
 
 dependencies:
   - name: postgresql
