--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -32,6 +32,7 @@ seed:
   packages:
   - std@latest
   - golang.org/x/tools@latest
+  backoffLimit:
 
 # default helm deployment values
 replicaCount: 1
