Support job scheduling on a dedicated node

--- a/helm/templates/post-install-job.yaml
+++ b/helm/templates/post-install-job.yaml
@@ -52,3 +52,16 @@ spec:
               -keep_going \
               -bypass_license_check={{ $.Values.bypassLicenseCheck }} \
               -seed=/seed/packages
+
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
