--- a/helm/templates/post-install-job.yaml
+++ b/helm/templates/post-install-job.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "pkgsite.labels" . | nindent 4 }}
   annotations:
-    "helm.sh/hook": post-install
+    "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-weight": "0"
     "helm.sh/hook-delete-policy": before-hook-creation
 spec:
